--- a/docs/src/CRE9148.md
+++ b/docs/src/CRE9148.md
@@ -47,4 +47,4 @@ The results of the experiment are presented in the following [link.](https://doc
 
 ## Codes Links:
 
-The following [link]() contains the main code file and some relevant custom modules used by the main script. The experiment ought to be directly reproducable with the given code repository and input data. 
+The following [link](https://github.com/ahmetumutdurmus/kareexperiments/tree/master/src/CRE9148) contains the main code file and some relevant custom modules used by the main script. The experiment ought to be directly reproducable with the given code repository and input data. 
