--- a/docs/src/CRE9148.md
+++ b/docs/src/CRE9148.md
@@ -1,6 +1,6 @@
 # Cumulative Ranking Explicit Churn (CRE9148)
 
-This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments) through time as explained in the relevant documentation. The relevant varying and constant hyperparameters are as follows:
+This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/Cumulative%20Ranking%20Explicit%20Churn.md) through time as explained in the relevant documentation. The relevant varying and constant hyperparameters are as follows:
 
 ## Varying Parameters:
 
