--- a/docs/src/CRE9148.md
+++ b/docs/src/CRE9148.md
@@ -25,7 +25,8 @@ o[:retrospectionperiod] = Month(6)
 o[:PCAdays] = 4 
     The number of days to compound when obtaining the spread between PCA reconstruction and market returns.
 o[:rankmode] = :Collective 
-    The possible 
+    The ranking statistic to use when optimizing. `:Collective` denotes the statistic obtained by using both PE
+    and spread. `:PEranks` and `:Spreadranks` are self explanatory.
 o[:addsecurities] = false 
     The decision whether to add the returns of the nontradable indices to the PCA analysis. If true, the 
     nontradable indices are included in the PCA reconstruction process but are disregarded during trading.
