--- a/docs/src/CRE2948.md
+++ b/docs/src/CRE2948.md
@@ -1,6 +1,6 @@
 # Cumulative Ranking Explicit Churn (CRE2948)
 
-This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/Cumulative%20Ranking%20Explicit%20Churn.md) through time as explained in the relevant documentation. The relevant varying and constant hyperparameters are as follows:
+This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/The%20Experiment%20Log.md#cumulative-ranking-explicit-churn-cre) through time as explained in the relevant documentation. The relevant varying and constant hyperparameters are as follows:
 
 ## Varying Parameters:
 
