--- a/docs/src/CRE9148.md
+++ b/docs/src/CRE9148.md
@@ -1,6 +1,10 @@
 # Cumulative Ranking Explicit Churn (CRE9148)
 
-This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/The%20Experiment%20Log.md#cumulative-ranking-explicit-churn-cre) through time as explained in the relevant documentation. The relevant varying and constant hyperparameters are as follows:
+This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/The%20Experiment%20Log.md#cumulative-ranking-explicit-churn-cre) through time as explained in the relevant documentation. 
+
+The objective of this experiment was to determine which element of the cartesian product of `o[:pcatype]` and `o[:normtype]` was the best for different lambda and churn values. 
+
+The relevant varying and constant hyperparameters are as follows:
 
 ## Varying Parameters:
 
