--- a/docs/src/CRE2948.md
+++ b/docs/src/CRE2948.md
@@ -1,6 +1,10 @@
 # Cumulative Ranking Explicit Churn (CRE2948)
 
-This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/The%20Experiment%20Log.md#cumulative-ranking-explicit-churn-cre) through time as explained in the relevant documentation. The relevant varying and constant hyperparameters are as follows:
+This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/The%20Experiment%20Log.md#cumulative-ranking-explicit-churn-cre) through time as explained in the relevant documentation. 
+
+The objective of this experiment was to determine whether adding some market data such as exchange rates and stock market indices to PCA process would improve upon the results obtained in [CRE9148.](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/CRE9148.md)
+
+The relevant varying and constant hyperparameters are as follows:
 
 ## Varying Parameters:
 
