--- a/docs/src/CRE9148.md
+++ b/docs/src/CRE9148.md
@@ -4,6 +4,8 @@ This experiment runs a grid search for [cumulative ranking explicit churn functi
 
 The objective of this experiment was to determine which element of the cartesian product of `o[:pcatype]` and `o[:normtype]` was the best for different lambda and churn values. 
 
+In short the best results were obtained by using `covariance` and `mean normalization`. The full results are presented below. 
+
 The relevant varying and constant hyperparameters are as follows:
 
 ## Varying Parameters:
