--- a/docs/src/CRE9148.md
+++ b/docs/src/CRE9148.md
@@ -1,6 +1,6 @@
 # Cumulative Ranking Explicit Churn (CRE9148)
 
-![](https://img.shields.io/badge/Date%20of%20Experiment-07%2F12%2F2018-blue.svg "Date of Experiment")
+[![](https://img.shields.io/badge/Date%20of%20Experiment-07%2F12%2F2018-blue.svg "Date of Experiment")](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/CRE9148.md)
 
 This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/The%20Experiment%20Log.md#cumulative-ranking-explicit-churn-cre) through time as explained in the relevant documentation. 
 
