--- a/docs/src/CRE2948.md
+++ b/docs/src/CRE2948.md
@@ -1,5 +1,7 @@
 # Cumulative Ranking Explicit Churn (CRE2948)
 
+[![](https://img.shields.io/badge/Date%20of%20Experiment-10%2F12%2F2018-blue.svg "Date of Experiment")](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/CRE2948.md)
+
 This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/The%20Experiment%20Log.md#cumulative-ranking-explicit-churn-cre) through time as explained in the relevant documentation. 
 
 The objective of this experiment was to determine whether adding some market data such as exchange rates and stock market indices to PCA process would improve upon the results obtained in [CRE9148.](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/CRE9148.md)
