--- a/docs/src/CRE9148.md
+++ b/docs/src/CRE9148.md
@@ -4,7 +4,7 @@
 
 This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/The%20Experiment%20Log.md#cumulative-ranking-explicit-churn-cre) through time as explained in the relevant documentation. 
 
-The objective of this experiment was to determine which element of the cartesian product of `o[:pcatype]` and `o[:normtype]` was the best for different `o[:lambda]` and `o[:churn]` values. 
+The objective of this experiment was to determine which element of the cartesian product of `o[:pcatype]` and `o[:normtype]` gave the best results for different `o[:lambda]` and `o[:churn]` values. 
 
 In short the best results were obtained by using `covariance` and `mean normalization`. The full results are presented below. 
 
