--- a/docs/src/CRE6168.md
+++ b/docs/src/CRE6168.md
@@ -1,7 +1,52 @@
 # Cumulative Ranking Explicit Churn (CRE6168)
 
+[![](https://img.shields.io/badge/Date%20of%20Experiment-11%2F12%2F2018-blue.svg "Date of Experiment")](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/CRE6168.md)
+
 This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/The%20Experiment%20Log.md#cumulative-ranking-explicit-churn-cre)
 through time as explained in the relevant documentation. 
 
-The objective of this experiment was to determine whether PCA reconstruction effect was significant during the mean reversion phase. 
-In order to do this the PCA spread was replaced by vanilla mean reversion. This is equivalent with setting `o[:featurenum]` 
+The objective of this experiment was to determine whether PCA reconstruction effect was significant in the mean reversion part of the signals. In order to do this the PCA spread was replaced by vanilla mean reversion. This is equivalent with setting `o[:featurenum] = 0`. 
+Spread was also obtained between real returns and columnwise means by setting `o[:normtype] = 1`.
+
+The relevant varying and constant hyperparameters are as follows:
+
+## Varying Parameters:
+
+```julia
+o[:normtype] = {0, 1} 
+    Type of normalization procedure used on raw data before PCA. `0` denotes no normalization. 
+    `1` denotes subtracting the mean. 
+o[:lambda] = {exp(log(0.1):log(100)/50:log(10)}
+    The constant before PE rankings to enforce the relative weights of PCA spread and PE rankings. 
+    Note that the constant before PCA spread rankings is 1. 
+o[:churn] = {0.10:0.01:0.20}
+    The daily churn constraint of the portfolio generating function.
+```
+
+## Constant Parameters:
+
+```julia
+o[:retrospectionperiod] = Month(6) 
+    The length of retrospection period of return series to be used while doing PCA.
+o[:pcatype] = :cov
+    Type of similarity used during PCA.
+o[:PCAdays] = 4 
+    The number of days to compound when obtaining the spread between PCA reconstruction and market returns.
+o[:rankmode] = :Collective 
+    The ranking statistic to use when optimizing. `:Collective` denotes the statistic obtained by using both PE
+    and spread. `:PEranks` and `:Spreadranks` are self explanatory.
+o[:addsecurities] = true 
+    The decision whether to add the returns of the nontradable indices to the PCA analysis. If true, the 
+    nontradable indices are included in the PCA reconstruction process but are disregarded during trading.
+o[:featurenum] = 0
+    The number of eigenvectors to be used when conducting the PCA.  
+o[:initialstart] = Date(2013, 1, 2)
+    The first date of backtesting.
+o[:endofperiod] = o[:initialstart]
+    The current day holder for portfolio generation function. 
+```
+
+## Input Data:
+
+The following [link](https://docs.google.com/spreadsheets/d/17KRBtCGKO4aQNd_eMO--WkLCO3-u_kCKedVwfr26uT0/edit?usp=sharing) contains the relevant data for the experiment: The daily closing prices and price/earnings ratios of 107 stocks and some 8 financial instruments. 
+
