--- a/docs/src/CRE6168.md
+++ b/docs/src/CRE6168.md
@@ -16,7 +16,7 @@ The relevant varying and constant hyperparameters are as follows:
 o[:normtype] = {0, 1} 
     Type of normalization procedure used on raw data before PCA. `0` denotes no normalization. 
     `1` denotes subtracting the mean. 
-o[:lambda] = {exp(log(0.1):log(100)/50:log(10)}
+o[:lambda] = {exp(log(0.1):log(100)/50:log(10))}
     The constant before PE rankings to enforce the relative weights of PCA spread and PE rankings. 
     Note that the constant before PCA spread rankings is 1. 
 o[:churn] = {0.10:0.01:0.20}
