--- a/docs/src/CRE6168.md
+++ b/docs/src/CRE6168.md
@@ -8,6 +8,8 @@ through time as explained in the relevant documentation.
 The objective of this experiment was to determine whether PCA reconstruction effect was significant in the mean reversion part of the signals. In order to do this the PCA spread was replaced by vanilla mean reversion. This is equivalent with setting `o[:featurenum] = 0`. 
 Spread was also obtained between real returns and columnwise means by setting `o[:normtype] = 1`.
 
+The returns are considerably lower for this experiment say for [CRE9148.](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/CRE9148.md) The results thus suggest PCA does indeed have some predictive power and should not be disregarded in a forecasting effort.
+
 The relevant varying and constant hyperparameters are as follows:
 
 ## Varying Parameters:
@@ -50,3 +52,10 @@ o[:endofperiod] = o[:initialstart]
 
 The following [link](https://docs.google.com/spreadsheets/d/17KRBtCGKO4aQNd_eMO--WkLCO3-u_kCKedVwfr26uT0/edit?usp=sharing) contains the relevant data for the experiment: The daily closing prices and price/earnings ratios of 107 stocks and some 8 financial instruments. 
 
+## Results: 
+
+The results of the experiment are presented in the following [link.](https://docs.google.com/spreadsheets/d/1iM28Y5FyW0UAOV4UBE5s15VAtl66SPUMzDLgCU5M1BA/edit?usp=sharing) Both the reported returns and vols are annualized whereas the maxdrawdowns are reported quarterly.
+
+## Codes Links:
+
+The following [link](https://github.com/ahmetumutdurmus/kareexperiments/tree/master/src/CRE6168) contains the main code file and some relevant custom modules used by the main script. The experiment ought to be directly reproducable with the given code repository and input data. 
