--- a/docs/src/CRE7743.md
+++ b/docs/src/CRE7743.md
@@ -2,3 +2,52 @@
 
 [![](https://img.shields.io/badge/Date%20of%20Experiment-13%2F12%2F2018-blue.svg "Date of Experiment")](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/CRE7743.md)
 
+This experiment runs a grid search for [cumulative ranking explicit churn function](https://github.com/ahmetumutdurmus/kareexperiments/blob/master/docs/src/The%20Experiment%20Log.md#cumulative-ranking-explicit-churn-cre)
+through time as explained in the relevant documentation. 
+
+The objective of this experiment was to determine whether using a different number of eigenvectors in the PCA analysis and whether amplyfying the effect of PCA in the spread statistic construction would improve the returns of the strategy. The PCA effect was amplyfied by equating the norm of reconstructed PCA returns to realized returns in a day by day basis. 
+
+The results obtained suggest that increasing the number of eigenvectors tend to improve the results but on the condition that z-score transformation was performed on the data. Vector normalization aspect however yields more conflicting results. For lower number of eigenvectors (up to 3) vector normalization improve the returns, while for higher number of eigenvectors (5 to 10) it seems to decrease the returns consistently. 
+
+A new hyperparameter o[:pcanorm] was introduced in this experiment to control whether columnwise PCA reconstructed norms were equal to real return norms.  
+
+The varying and constant hyperparameter configuration is as follows:
+
+## Varying Parameters:
+
+```julia
+o[:pcanorm] = {true, false}
+    Control whether norm equating as described above is performed or not. For full implementation 
+    see the source code. `false` leaves reconstructed returns as is, `true` implements the procedure. 
+o[:featurenum] = {1:10}
+    The number of eigenvectors to be used when conducting the PCA.  
+o[:normtype] = {0, 1} 
+    Type of normalization procedure used on raw data before PCA. `0` denotes no normalization. 
+    `1` denotes subtracting the mean. 
+o[:lambda] = {exp(log(0.1):log(100)/50:log(10))}
+    The constant before PE rankings to enforce the relative weights of PCA spread and PE rankings. 
+    Note that the constant before PCA spread rankings is 1. 
+```
+
+## Constant Parameters:
+
+```julia
+o[:churn] = 0.15
+    The daily churn constraint of the portfolio generating function.
+o[:retrospectionperiod] = Month(6) 
+    The length of retrospection period of return series to be used while doing PCA.
+o[:pcatype] = :cov
+    Type of similarity used during PCA.
+o[:PCAdays] = 4 
+    The number of days to compound when obtaining the spread between PCA reconstruction and market returns.
+o[:rankmode] = :Collective 
+    The ranking statistic to use when optimizing. `:Collective` denotes the statistic obtained by using both PE
+    and spread. `:PEranks` and `:Spreadranks` are self explanatory.
+o[:addsecurities] = false
+    The decision whether to add the returns of the nontradable indices to the PCA analysis. If true, the 
+    nontradable indices are included in the PCA reconstruction process but are disregarded during trading.
+o[:initialstart] = Date(2013, 1, 2)
+    The first date of backtesting.
+o[:endofperiod] = o[:initialstart]
+    The current day holder for portfolio generation function. 
+```
