--- a/docs/src/CRE7743.md
+++ b/docs/src/CRE7743.md
@@ -51,3 +51,14 @@ o[:initialstart] = Date(2013, 1, 2)
 o[:endofperiod] = o[:initialstart]
     The current day holder for portfolio generation function. 
 ```
+## Input Data:
+
+The following [link](https://docs.google.com/spreadsheets/d/17KRBtCGKO4aQNd_eMO--WkLCO3-u_kCKedVwfr26uT0/edit?usp=sharing) contains the relevant data for the experiment: The daily closing prices and price/earnings ratios of 107 stocks and some 8 financial instruments. 
+
+## Results: 
+
+The results of the experiment are presented in the following [link.](https://docs.google.com/spreadsheets/d/1voAeUjti0ygeIyanW5urw5w9Z6XkWPh8aFpE7c6f1O0/edit?usp=sharing) Both the reported returns and vols are annualized whereas the maxdrawdowns are reported quarterly.
+
+## Codes Links:
+
+The following [link](https://github.com/ahmetumutdurmus/kareexperiments/tree/master/src/CRE7743) contains the main code file and some relevant custom modules used by the main script. The experiment ought to be directly reproducable with the given code repository and input data. 
