--- a/docs/src/CRE7743.md
+++ b/docs/src/CRE7743.md
@@ -9,7 +9,7 @@ The objective of this experiment was to determine whether using a different numb
 
 The results obtained suggest that increasing the number of eigenvectors tend to improve the results but on the condition that z-score transformation was performed on the data. Vector normalization aspect however yields more conflicting results. For lower number of eigenvectors (up to 3) vector normalization improve the returns, while for higher number of eigenvectors (5 to 10) it seems to decrease the returns consistently. 
 
-A new hyperparameter o[:pcanorm] was introduced in this experiment to control whether columnwise PCA reconstructed norms were equal to real return norms.  
+A new hyperparameter `o[:pcanorm]` was introduced in this experiment to control whether columnwise PCA reconstructed norms were equal to real return norms.  
 
 The varying and constant hyperparameter configuration is as follows:
 
